--- a/App/app.json
+++ b/App/app.json
@@ -31,6 +31,14 @@
     "floorNo": "f01",
     "roomNo" : "r01",
     "status" : "deactive"
+  },
+  {
+    "id": "5",
+    "smokeLevel": "12",
+    "co2Level": "12",
+    "floorNo": "f01",
+    "roomNo" : "r01",
+    "status" : "deactive"
   }
 ]
 }
