--- a/App/app.json
+++ b/App/app.json
@@ -1,42 +1,10 @@
 {
 "Sensors": [
   {
-    "id": "1",
-    "smokeLevel": "shashimal",
-    "co2Level": "16",
+    "smokeLevel": 5,
+    "co2Level": 2,
+    "id": 1,
     "floorNo": "f02",
-    "roomNo" : "r01",
-    "status" : "deactive"
-  },
-  {
-    "id": "2",
-    "smokeLevel": "12",
-    "co2Level": "12",
-    "floorNo": "f01",
-    "roomNo" : "r01",
-    "status" : "active"
-  },
-  {
-    "id": "3",
-    "smokeLevel": "12",
-    "co2Level": "12",
-    "floorNo": "f01",
-    "roomNo" : "r01",
-    "status" : "active"
-  },
-  {
-    "id": "4",
-    "smokeLevel": "12",
-    "co2Level": "12",
-    "floorNo": "f01",
-    "roomNo" : "r01",
-    "status" : "deactive"
-  },
-  {
-    "id": "5",
-    "smokeLevel": "12",
-    "co2Level": "12",
-    "floorNo": "f01",
     "roomNo" : "r01",
     "status" : "deactive"
   }
